objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>UPC Sales Process</fullName>
        <description>Created by Nexell and used for all record types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted %2F Pending Documents</fullName>
        </values>
        <values>
            <fullName>Closed - TPV Pending</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closure</fullName>
        </values>
        <values>
            <fullName>Negotiation Review</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Price Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Sent for customer approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>UPC Termination Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Close Withdrawn</fullName>
        </values>
        <values>
            <fullName>Closed Terminate</fullName>
        </values>
        <values>
            <fullName>Entry</fullName>
        </values>
        <values>
            <fullName>Retention</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSCAP__Authoriser_Email_Address__c</fullName>
        <label>Authoriser Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSCAP__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCAP__VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor_old__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Total_Recurring_Charge__c</fullName>
        <description>Story #40 - Old Total Recurring Charge fetched from previous basket</description>
        <inlineHelpText>Populated in MACD Upgrade calculated from previous Product Basket.</inlineHelpText>
        <label>Old Total Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PushCount__c</fullName>
        <label>PushCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <description>Holds the total contract value of this opportunity. This field is mapped from a synchronised basket</description>
        <inlineHelpText>Holds the total contract value of this opportunity. This field is mapped from a synchronised basket</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_One_Off_Charges__c</fullName>
        <description>The sum of only the one off charges mapped from a synchronised basket.</description>
        <inlineHelpText>The sum of only the one off charges mapped from a synchronised basket.</inlineHelpText>
        <label>Total One Off Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Holds the sum of non-recurring and one year&apos;s worth of recurring prices of all items contained in mapped synchronised basket.</description>
        <inlineHelpText>Holds the sum of non-recurring and one year&apos;s worth of recurring prices of all items contained in mapped synchronised basket.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Charge__c</fullName>
        <description>The sum of only the recurring charges mapped from a synchronised basket.</description>
        <inlineHelpText>The sum of only the recurring charges mapped from a synchronised basket.</inlineHelpText>
        <label>Total Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Credit_Alert__c</fullName>
        <formula>Account.UPC_Credit_Alert__c</formula>
        <label>Credit Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Sales_Segment__c</fullName>
        <formula>IF( ISPICKVAL(Account.UPC_Segment_Channel__c,&quot;&quot;), 

HYPERLINK(&quot;/&quot; &amp;  Account.Id , 
(&quot;Sales Segment is Blank. Click here to update the Account&quot;) 
, &quot;_self&quot; ), 

TEXT(Account.UPC_Segment_Channel__c))</formula>
        <label>Account Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Account_Sales_Subsegment__c</fullName>
        <formula>TEXT(Account.UPC_Sales_Subsegment__c)</formula>
        <label>Account Sales Subsegment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_B2C_Clarify_ID__c</fullName>
        <description>Created by Nexell and used to add the ID</description>
        <label>B2C Clarify ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_B2C_Customer_E_Mail__c</fullName>
        <label>B2C Customer E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UPC_B2C_General_Description__c</fullName>
        <description>Created by Nexell and used to add a general description.</description>
        <label>B2C General Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_B2C_Products__c</fullName>
        <description>Created by Nexell and used to add products.</description>
        <label>B2C Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_B2C_Retain_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retain E-Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Back_Office_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Nexell to identify the back office Approver.</description>
        <label>Back Office Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Basket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by backoffice validation</description>
        <inlineHelpText>Please Check:  Sync / Approved / Correct Pricing / Approval Note</inlineHelpText>
        <label>Basket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Method__c</fullName>
        <description>Created by Nexell and used to identify the billing method.</description>
        <label>Billing Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Bill</fullName>
                </value>
                <value>
                    <fullName>E-Bill</fullName>
                </value>
                <value>
                    <fullName>Bill by Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_CAPEX_Type__c</fullName>
        <description>Created by Nexell and used to identify CAPEX.</description>
        <label>CAPEX Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No investment required (no PCT)</fullName>
                </value>
                <value>
                    <fullName>Majority standard products (no PCT)</fullName>
                </value>
                <value>
                    <fullName>PCT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ClickApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the offer was approved via ClickApprove</description>
        <label>ClickApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Contract_Duration__c</fullName>
        <description>Created by Nexell. Requested by CloudSense.</description>
        <inlineHelpText>Contract Duration in Months.</inlineHelpText>
        <label>Contract Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Signed</fullName>
                    <default>true</default>
                    <label>Contract Signed</label>
                </value>
                <value>
                    <fullName>TPV</fullName>
                </value>
                <value>
                    <fullName>Click Approve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Documents_and_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by BackOffice Validation</description>
        <inlineHelpText>Please Check: Completeness / Correctness / Legibility / Filing</inlineHelpText>
        <label>Documents and Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Loss_Reason__c</fullName>
        <description>Created by Nexell and used to identify the loss reason.</description>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Company Liquidation</fullName>
                </value>
                <value>
                    <fullName>Company Site closed / Fusion</fullName>
                </value>
                <value>
                    <fullName>Company Suspended / Inkasso</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Competitor FTTH</fullName>
                </value>
                <value>
                    <fullName>Competitor Price</fullName>
                </value>
                <value>
                    <fullName>Competitor Product</fullName>
                </value>
                <value>
                    <fullName>Customer Offnet</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction Sales</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction Technical Support</fullName>
                </value>
                <value>
                    <fullName>Fusion</fullName>
                </value>
                <value>
                    <fullName>Internal Product Change</fullName>
                </value>
                <value>
                    <fullName>Migration to B2C</fullName>
                </value>
                <value>
                    <fullName>Network Outage / Issue</fullName>
                </value>
                <value>
                    <fullName>No Need Anymore</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Problem Installation / Porting</fullName>
                </value>
                <value>
                    <fullName>Problems with Bills / Administration</fullName>
                </value>
                <value>
                    <fullName>Product Configuration</fullName>
                </value>
                <value>
                    <fullName>Product Functionality</fullName>
                </value>
                <value>
                    <fullName>Product unavailability</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>UPC_Cancellation</fullName>
                </value>
                <value>
                    <fullName>UPC_Cleanup</fullName>
                </value>
                <value>
                    <fullName>UPC_Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Main_Commercial_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created by Nexell to track the main commercial contact. It is fulfilled automatically by the contact role Main Commercial Contact under the Account-Contact relationship.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>UPC_Main_Commercial_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Main_Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created by Nexell to track the Main Technical Contact. It is fulfilled automatically by the contact role Main Technical Contact under the Account-Contact relationship.</description>
        <label>Main Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Main Technical Contact)</relationshipLabel>
        <relationshipName>Opportunities_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Need_retain_existing_DTV_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need to retain an existing DTV contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Backoffice Validation</description>
        <inlineHelpText>Please Check: Sales Segment / Type / Contacts and Roles / Billing Account / Notes / Migrations</inlineHelpText>
        <label>Opportunity Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Order_Not_Validated_Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Nexell and used to identify unvalidated order.</description>
        <label>Order Not Validated - Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Order_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Nexell and used to validate the order.</description>
        <label>Order Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_OutboundSale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for sales compensation multiplier</description>
        <label>Outbound Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Previous_Provider__c</fullName>
        <description>Created by Nexell and used to identify the previous provider.</description>
        <label>Previous Provider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Primary_Contact_Gender__c</fullName>
        <description>The gender of the primary contact, used in email templates.</description>
        <formula>TEXT(UPC_Main_Commercial_Contact__r.UPC_Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The gender of the primary contact.</inlineHelpText>
        <label>Primary Contact Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Probability_Manually_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Nexell, used to control the manual changes on opportunities.</description>
        <label>Probability Manually Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Receipt_of_Termination__c</fullName>
        <label>Receipt of Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Record_Type_Name__c</fullName>
        <description>Used to show the Record Type in Frozen Oppys.</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Reference_number__c</fullName>
        <description>Field created by Nexell to control the Opportunity reference number.</description>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Reference number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UPC_Rejection_Comments__c</fullName>
        <description>Created by Nexell, used to capture any comments on Rejection.</description>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Rejection_Reason__c</fullName>
        <description>Created by Nexell. Used to control the order rejection reason by the backoffice user.</description>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documents Missing</fullName>
                </value>
                <value>
                    <fullName>Opportunity Not Completed</fullName>
                </value>
                <value>
                    <fullName>Wrong Offer</fullName>
                </value>
                <value>
                    <fullName>Pricing Not Completed</fullName>
                </value>
                <value>
                    <fullName>Administrative Obstacles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Retention_Entry__c</fullName>
        <label>Retention Entry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot Call</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Direct Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Signing_Date__c</fullName>
        <label>Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Synchronised_Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds reference for synchronised product basket record. Used for easier access to basket properties from opportunity.</description>
        <inlineHelpText>Holds reference for synchronised product basket record.</inlineHelpText>
        <label>Synchronised Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Background__c</fullName>
        <label>Termination Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Suspended / Inkasso</fullName>
                </value>
                <value>
                    <fullName>Company Site closed / Fusion</fullName>
                </value>
                <value>
                    <fullName>Company Liquidation</fullName>
                </value>
                <value>
                    <fullName>Competitor FTTH</fullName>
                </value>
                <value>
                    <fullName>Competitor Price</fullName>
                </value>
                <value>
                    <fullName>Competitor Product</fullName>
                </value>
                <value>
                    <fullName>Migration to B2C</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction Sales</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction Technical Support</fullName>
                </value>
                <value>
                    <fullName>Customer Offnet</fullName>
                </value>
                <value>
                    <fullName>Network Outage / Issue</fullName>
                </value>
                <value>
                    <fullName>Problem Installation / Porting</fullName>
                </value>
                <value>
                    <fullName>Problem Bill / Administration</fullName>
                </value>
                <value>
                    <fullName>Internal Product Change</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Termination_Wish_Date__c</fullName>
        <label>Termination Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Win_Probability__c</fullName>
        <description>Created by Nexell to be used on Kanban View. Updates on this field will automatically update the Probability field via Process builder.</description>
        <label>Win Probability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30%</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <label>60%</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>70%</label>
                </value>
                <value>
                    <fullName>80</fullName>
                    <label>80%</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>90%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Generation_Batch_Job_Id__c</fullName>
        <label>Order Generation Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Process_Order_Generation_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the opportunity is set to be processed in batch mode</description>
        <inlineHelpText>Force batch processing of the opportunity</inlineHelpText>
        <label>Process Order Generation In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_Batch_Job_Id__c</fullName>
        <description>Id of the batch that&apos;s generating a new product bundle/basket and basically cloning product configurations</description>
        <label>Product Configuration Clone Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product configuration cloning is set to be processed in batch mode</description>
        <inlineHelpText>Force generation of MACD opportunity in a batch</inlineHelpText>
        <label>Product Configuration Clone In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Added_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Added To</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Opportunities (Subscription To Be Added To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Changed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Changed</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Oppys_in_Closure_Stage</fullName>
        <columns>UPC_Reference_number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closure</value>
        </filters>
        <label>All Oppys in Closure Stage</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
</CustomObject>